Making !importants an scss lint error

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -44,7 +44,7 @@ linters:
     enabled: true
   ImportantRule:
     enabled: true
-    severity: warning
+    severity: error
   ImportPath:
     enabled: true
     leading_underscore: false
